--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@400;500;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -270,11 +270,11 @@ html {
   --tw-color-black-03: 40 40 40;
   --tw-color-red: 255 82 82;
 
-  --font-jost: 'Jost', 'Inter', sans-serif;
+  --font-lexend: 'Lexend', 'Inter', sans-serif;
 }
 
 body, .font-primary {
-  font-family: var(--font-jost);
+  font-family: var(--font-lexend);
 }
 
 @layer base {
